--- a/jade/main-nav.jade
+++ b/jade/main-nav.jade
@@ -1,10 +1,7 @@
 nav.navbar.navbar-dark.navbar-fixed-top.bg-primary.text-white
-  .container
-    .row
-      .col-xs-1
-        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#exCollapsingNavbar', aria-controls='exCollapsingNavbar', aria-expanded='false', aria-label='Toggle navigation')
-      .col-xs-4.offset-xs-1
-        a.navbar-brand(href='#') ReadMeter
+  .container.nav-top
+      button.navbar-toggler(type='button', data-toggle='collapse', data-target='#exCollapsingNavbar', aria-controls='exCollapsingNavbar', aria-expanded='false', aria-label='Toggle navigation')
+      a.navbar-brand(href='#') ReadMeter
 
   #exCollapsingNavbar.collapse
     .bg-primary.text-white
