--- a/css/style.scss
+++ b/css/style.scss
@@ -25,6 +25,10 @@ body {
   width: 100vw;
 }
 
+.container {
+  margin: 0 2rem;
+}
+
 ul {
   list-style: none;
 }
@@ -45,6 +49,11 @@ p {
   box-shadow: 0 2px 2px  $gray;
 }
 
+.nav-top.container {
+  display: flex;
+  margin-left: 0;
+}
+
 .navbar-brand {
   padding-left: 1rem;
 }
@@ -53,6 +62,7 @@ p {
   align-items: stretch;
   display: flex;
   flex-direction: column;
+  margin: 0;
 
   li {
     border-bottom: 2px solid $white;
@@ -97,10 +107,6 @@ p {
 .book-showcase {
   border-bottom: 1px solid $trsprt-gray;
 
-}
-
-.container {
-  margin: 0 2rem;
 }
 
 .container:nth-last-of-type(1) .book-showcase {
