--- a/jade/main-nav.jade
+++ b/jade/main-nav.jade
@@ -6,6 +6,6 @@ nav.navbar.navbar-dark.navbar-fixed-top.bg-primary.text-white
   #exCollapsingNavbar.collapse
     .bg-primary.text-white
       ul.nav-collapse
-        for page in ["Home", "About", "Browse"]
+        for page in ["Home1", "About", "Browse"]
           li
             a(href= "#{page}.html") #{page}
