--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
 ul {
   list-style: none;
   margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -28,6 +29,11 @@ h4,
 h5,
 h6,
 p {
+  margin: 0;
+  padding: 0;
+}
+
+#exCollapsingNavbar {
   margin: 0;
   padding: 0;
 }
