--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   margin-top: 56px;
   min-height: calc(100vh - 40px);
-  width: 100vw;
+  width: 100%;
 }
 
 .container {
@@ -33,7 +33,7 @@ p {
   padding: 0;
 }
 
-#exCollapsingNavbar {
+collapse-nav {
   margin: 0;
   padding: 0;
 }
@@ -106,6 +106,10 @@ p {
   padding-top: 1.5rem;
 }
 
+.carousel {
+  margin-bottom: 2rem;
+}
+
 .carousel ul {
   display: flex;
   justify-content: center;
@@ -123,7 +127,7 @@ p {
 .carousel .carousel-card .carousel-cover {
   box-shadow: -0.5rem 0 1rem #111;
   height: 8rem;
-  margin: 0 -.6rem;
+  margin: 0 -1.2rem 0 0;
 }
 
 .carousel .carousel-card .carousel-time {
