--- a/css/style.scss
+++ b/css/style.scss
@@ -192,7 +192,18 @@ footer {
       margin: 0;
     }
   }
+
+  h4 {
+    font-size: .75rem;
+    font-weight: normal;
+
+    .search-term {
+      font-style: italic;
+      font-weight: bold;
+    }
+  }
 }
+
 
 
 .search-container {
