--- a/css/style.css
+++ b/css/style.css
@@ -166,14 +166,24 @@ footer {
   margin: 0;
 }
 
-.container-test {
+.search-results-bar h4 {
+  font-size: .75rem;
+  font-weight: normal;
+}
+
+.search-results-bar h4 .search-term {
+  font-style: italic;
+  font-weight: bold;
+}
+
+.search-container {
   background: #fff;
   border-radius: 3px;
   margin: 12px auto;
   padding: 15px;
 }
 
-.search-card-test {
+.info-card {
   background: #d3d3d3;
   border-radius: 5px;
   display: flex;
@@ -181,7 +191,7 @@ footer {
   padding: 10px;
 }
 
-.search-details-info-test {
+.info-card-details-info {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
@@ -189,32 +199,32 @@ footer {
   margin-right: .5rem;
 }
 
-.search-details-info-test .search-details-title-test {
+.info-card-details-info .info-card-details-title {
   font-size: 1.05rem;
   margin-bottom: .1rem;
 }
 
-.search-details-info-test .search-details-author-test {
+.info-card-details-info .info-card-details-author {
   font-size: .65rem;
   margin-bottom: .4rem;
 }
 
-.search-details-info-test img {
+.info-card-details-info img {
   flex-grow: 0;
   margin-top: auto;
 }
 
-.search-details-time-test {
+.info-card-details-time {
   margin-bottom: .3rem;
 }
 
-.search-details-time-test .search-details-time-title-test {
+.info-card-details-time .info-card-details-time-title {
   font-size: .9rem;
   margin-bottom: .2rem;
   text-decoration: underline;
 }
 
-.search-details-time-test .search-details-time-amount-test {
+.info-card-details-time .info-card-details-time-amount {
   background-color: rgba(2, 117, 216, 0.6);
   border-radius: 5px;
   color: #fff;
@@ -225,19 +235,19 @@ footer {
   padding: .3rem;
 }
 
-.search-details-cover-test {
+.info-card-details-cover {
   display: flex;
   flex-direction: column;
   margin-right: .7rem;
 }
 
-.search-details-cover-test img {
+.info-card-details-cover img {
   box-shadow: 0 0 4px #222;
   height: 7rem;
   margin: 0 auto .3rem;
 }
 
-.search-details-cover-test .details-link-test {
+.info-card-details-cover .info-card-details-link {
   font-size: .8rem;
   font-weight: bolder;
   line-height: 1rem;
@@ -245,24 +255,24 @@ footer {
   text-align: center;
 }
 
-.search-details-table-test {
+.info-card-details-table {
   display: flex;
   flex-direction: column;
   font-size: .9rem;
   justify-content: center;
 }
 
-.search-details-table-test tr:nth-last-of-type(n + 2) {
+.info-card-details-table tr:nth-last-of-type(n + 2) {
   border-bottom: 1px solid #808080;
 }
 
-.search-details-table-test th {
+.info-card-details-table th {
   font-weight: bold;
   padding-right: .5rem;
 }
 
 @media (max-width: 480px) {
-  .search-details-table-test {
+  .info-card-details-table {
     display: none;
   }
 }
