--- a/css/style.scss
+++ b/css/style.scss
@@ -213,8 +213,8 @@ footer {
   padding: 15px;
 }
 
-// Search Cards
-.search-card {
+// Info Cards
+.info-card {
   background: $lightgray;
   border-radius: 5px;
   display: flex;
@@ -222,19 +222,19 @@ footer {
   padding: 10px;
 }
 
-.search-details-info {
+.info-card-details-info {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   margin-right: .5rem;
 
-  .search-details-title {
+  .info-card-details-title {
     font-size: 1.05rem;
     margin-bottom: .1rem;
   }
 
-  .search-details-author {
+  .info-card-details-author {
     font-size: .65rem;
     margin-bottom: .4rem;
   }
@@ -245,18 +245,18 @@ footer {
   }
 }
 
-.search-details-time {
+.info-card-details-time {
 
   margin-bottom: .3rem;
 
-  .search-details-time-title {
+  .info-card-details-time-title {
     font-size: .9rem;
     margin-bottom: .2rem;
     text-decoration: underline;
 
   }
 
-  .search-details-time-amount {
+  .info-card-details-time-amount {
     background-color: $bg-c-caption;
     border-radius: 5px;
     color: $white;
@@ -269,7 +269,7 @@ footer {
 
 }
 
-.search-details-cover {
+.info-card-details-cover {
   display: flex;
   flex-direction: column;
   margin-right: .7rem;
@@ -280,7 +280,7 @@ footer {
     margin: 0 auto .3rem;
   }
 
-  .details-link {
+  .info-card-details-link {
     font-size: .8rem;
     font-weight: bolder;
     line-height: 1rem;
@@ -290,7 +290,7 @@ footer {
 
 }
 
-.search-details-table {
+.info-card-details-table {
   display: flex;
   flex-direction: column;
   font-size: .9rem;
